i tried to fix the shifting, i give up

--- a/.config/matugen/templates/discord.css
+++ b/.config/matugen/templates/discord.css
@@ -3194,6 +3194,10 @@ div[data-list-id="profile-288633425303437312"]
     color: var(--title-color);
 }
 
+.b0dfc2ed9c57037d-overflow {
+     font-family: var(--font-title)!important;
+ }
+
 .c19a557985eb7793-username:hover,
 ._972a0d22c8afa7f0-username:hover,
 ._972a0d22c8afa7f0-overflowTooltip:hover,
